finished the home template

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,22 +11,83 @@
 </head>
 <body>
 <header>
+    <div class="nav container">
+        
+    <a href="#" class="login">Login</a> 
     <a href="#" class="logo">Be<span>li</span></a>
+    <a href="#" class="login">Register</a>
+</div>
 </header>
+<section class="home" id="home">
+    <div class="home-text container">
+        <h2 class="home-title">The Beli Blog</h2>
+        <span class="home-subtitle">Your Source Of Great Content</span>
+    </div>
+</section>
+
+
+<div class="post-filter container">
+    <span class="filter-item active-filter" data-filter="all">All</span>
+    <span class="filter-item" data-filter="design">Design</span>
+    <span class="filter-item" data-filter="tech">Tech</span>
+    <span class="filter-item" data-filter="mobile">Mobile</span>
+    
+</div>
+
+<section class="post container">
+    <div class="post-box">
+        <img src="#" alt="" class="post-img">
+        <h2 class="category">Mobile</h2>
+        <a href="#" class="post-title">How Create Best UX</a>
+        <span class="post-date">22 jun 2023</span>
+        <p class="post-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quibusdam consectetur iusto veritatis ex nobis magnam suscipit omnis hic, esse aliquam voluptas nostrum eveniet neque modi nulla dicta tempora autem.</p>
+        <div class="profile">
+            <img src="#" alt="" class="profile-img">
+            <span class="profile-name">Adbelrhman Nabil</span>
+        </div>
+    </div>
+    <div class="post-box">
+        <img src="#" alt="" class="post-img">
+        <h2 class="category">Mobile</h2>
+        <a href="#" class="post-title">How Create Best UX</a>
+        <span class="post-date">22 jun 2023</span>
+        <p class="post-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quibusdam consectetur iusto veritatis ex nobis magnam suscipit omnis hic, esse aliquam voluptas nostrum eveniet neque modi nulla dicta tempora autem.</p>
+        <div class="profile">
+            <img src="#" alt="" class="profile-img">
+            <span class="profile-name">Adbelrhman Nabil</span>
+        </div>
+    </div>    <div class="post-box">
+        <img src="#" alt="" class="post-img">
+        <h2 class="category">Mobile</h2>
+        <a href="#" class="post-title">How Create Best UX</a>
+        <span class="post-date">22 jun 2023</span>
+        <p class="post-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quibusdam consectetur iusto veritatis ex nobis magnam suscipit omnis hic, esse aliquam voluptas nostrum eveniet neque modi nulla dicta tempora autem.</p>
+        <div class="profile">
+            <img src="#" alt="" class="profile-img">
+            <span class="profile-name">Adbelrhman Nabil</span>
+        </div>
+    </div>    <div class="post-box">
+        <img src="#" alt="" class="post-img">
+        <h2 class="category">Mobile</h2>
+        <a href="#" class="post-title">How Create Best UX</a>
+        <span class="post-date">22 jun 2023</span>
+        <p class="post-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quibusdam consectetur iusto veritatis ex nobis magnam suscipit omnis hic, esse aliquam voluptas nostrum eveniet neque modi nulla dicta tempora autem.</p>
+        <div class="profile">
+            <img src="#" alt="" class="profile-img">
+            <span class="profile-name">Adbelrhman Nabil</span>
+        </div>
+    </div>
+</section>
 
 
 
 
 
 
-
-
-
-
-
-
-
-
+<script
+  src="https://code.jquery.com/jquery-3.6.3.js"
+  integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+  crossorigin="anonymous"></script>
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
