added the footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
 <body>
 <header>
     <div class="nav container">
-        
+        <a href="#" class="logo">Be<span>li</span></a>
     <a href="#" class="login">Login</a> 
-    <a href="#" class="logo">Be<span>li</span></a>
+
     <a href="#" class="login">Register</a>
 </div>
 </header>
@@ -78,7 +78,15 @@
         </div>
     </div>
 </section>
-
+<div class="footer container">
+    <p>&#169; Blei Blogging </p>
+    <div class="social">
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="#"><i class="bx bxl-github"></i></a>
+        
+    </div>
+</div>
 
 
 
