--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-<body>
-<header>
-    <div class="nav container">
-        <a href="#" class="logo">Be<span>li</span></a>
-    <a href="#" class="login">Login</a> 
+{% extends 'base.html' %}
+{% block content %}
 
-    <a href="#" class="login">Register</a>
-</div>
-</header>
 <section class="home" id="home">
     <div class="home-text container">
         <h2 class="home-title">The Beli Blog</h2>
@@ -50,25 +33,4 @@
     {%endfor%}
    
 </section>
-
-<div class="footer container">
-    <p>&#169; Blei Blogging </p>
-    <div class="social">
-        <a href="#"><i class="bx bxl-facebook"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
-        
-    </div>
-</div>
-
-
-
-
-
-<script
-  src="https://code.jquery.com/jquery-3.6.3.js"
-  integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
-  crossorigin="anonymous"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-</body>
-</html>
+{% endblock %}
