updated the header to switch the buttons if user is authenticated

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,15 @@
 <header>
     <div class="nav container">
         <a href="{%url 'blogs'%}" class="logo">Be<span>li</span></a>
-    <a href="#" class="login">Login</a> 
+        {% if user.is_authenticated %}
+        <a href="" class="login">My Blogs</a> 
+
+        <a href="{% url 'logout'%}" class="login">Logout</a>
+        {% else %}
+        <a href="#" class="login">Login</a> 
 
     <a href="{% url 'register'%}" class="login">Register</a>
+    {% endif %}
 </div>
 </header>
 	
