--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,11 @@
     <div class="nav container">
         <a href="{%url 'blogs'%}" class="logo">Be<span>li</span></a>
         {% if user.is_authenticated %}
-        <a href="" class="login">My Blogs</a> 
+        <a href="{% url 'my_blogs'%}" class="login">My Blogs</a> 
 
         <a href="{% url 'logout'%}" class="login">Logout</a>
         {% else %}
-        <a href="#" class="login">Login</a> 
+        <a href="{% url 'login'%}" class="login">Login</a> 
 
     <a href="{% url 'register'%}" class="login">Register</a>
     {% endif %}
